--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-headless_chrome = "0.9"
-failure = "0.1.8"
+fantoccini = "0.17.2"
+tokio = { version = "1.2.0", features = ["macros","rt-multi-thread"] }
+serde_json = "1.0"
+webdriver = "0.43.0"
