--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 
 [dependencies]
 fantoccini = "0.17.2"
-tokio = { version = "1.2.0", features = ["macros","rt-multi-thread"] }
+tokio = { version = "1.2.0", features = ["macros","rt-multi-thread","time"] }
 serde_json = "1.0"
 webdriver = "0.43.0"
